src/tests/functionality/assignment_4_control_flow/valid/06_anonymous_scope_shadowing.c
int main() {
    int x = 1;

    {
        int x = 5;
        x = x + 1;
    }

    x = x + 2;

    return x;
}