src/tests/functionality/assignment_4_control_flow/invalid_syntax/01_while_missing_condition.c
int main() {
    int x = 0;

    while () {
        x = x + 1;
    }

    return x;
}